# replkit

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt
docs/: ARCHITECTURE.md  check_list_aliases.md  init.txt  interpreter_guide.md  load.txt  repl.md  repl_FR.md
examples/: calc_boolean_repl.py  math_repl.py
replkit/: __init__.py  generic_repl.py
src/replkit/: __init__.py  alias.py  alias_mixin.py  cli_utils.py  default_interpreter.py  file_loader_mixin.py  generic_repl.py  history_mixin.py  repl_commands.py
tests/: conftest.py  test_aliases.py  test_cli.py  test_commands.py  test_completer.py  test_generic_repl.py  test_meta_commands.py
